# CoinPurseThree

./: .editorconfig  .gitignore  LICENCE.md  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
docs/: devnotes.md  entity_model.md
src/: __init__.py  alembic.ini  coin_purse.db  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 9c9ba0209a49_initial_migration.py  cdd414acc41a_add_active_to_player.py  f1fdd02368ab_initialcreate.py
src/database/: dto  dto.py  models.py
src/routers/: characters.py  players.py  transaction.py
src/services/: players_service.py
tests/: test_main.py  test_player.py
