[tool.poetry]
name = "coin-purse"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
readme = "README.md"
packages = [{include = "coin_purse", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
max-line-length = 120

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-lenth = 120

[tool.ruff.flake8-quotes]
docstring-quotes = "single"

[tool.pytest.ini_options]
# -ra is for showing the output of the tests that failed
# -q is for quiet mode
addopts = "-ra -q"
# this adds the application to the path for the tests
pythonpath = [".", "arconverter"]
# this sets the testpaths to the tests directory
testpaths = ["tests"]