[tool.poetry]
name = "coin-purse"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
readme = "README.md"
packages = [{include = "coin_purse", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
uvicorn = "^0.23.2"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pycodestyle]
max-line-length = 120


[tool.pytest.ini_options]
# -ra is for showing the output of the tests that failed
# -q is for quiet mode
addopts = "-ra -q"
# this adds the application to the path for the tests
pythonpath = [".", "arconverter"]
# this sets the testpaths to the tests directory
testpaths = ["tests"]